fix: eth amount not showing in send page

--- a/packages/fetch-extension/src/layouts-v2/header-layout/style.module.scss
+++ b/packages/fetch-extension/src/layouts-v2/header-layout/style.module.scss
@@ -30,6 +30,10 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
+  background-color: #030e3b;
+  background-size: cover;
+  background-image: url("../../public/assets/svg/wireframe/bg.svg");
+  background-repeat: no-repeat;
   overflow-y: hidden;
   overflow-x: hidden;
 }
